--- a/src/Python/webserver/client/src/pages/Login.css
+++ b/src/Python/webserver/client/src/pages/Login.css
@@ -2,9 +2,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 40vh;
-    margin-left: 3vh;
-    margin-right: 3vh;
-    margin-bottom: 3vh;
+    margin-top: 12%;
+}
 
+label, input {
+    transform: scale(1.1);
+    display: block;
+}
+
+label {
+    transform: scale(1.1);
+    margin-bottom: 20px;
+}
+
+.eingabe .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-left: 49px;
 }
