--- a/src/Python/webserver/client/src/pages/Navbar.css
+++ b/src/Python/webserver/client/src/pages/Navbar.css
@@ -1,104 +1,96 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+}
 
 .Adduser, .Chat, .Logout{
     display: flex;
     height: 90vh;
     align-items: center;
     justify-content: center;
-    font-size: 3rem;
+    font-size: 8rem;
 }
 .navbar {
-    margin-top: -8px;
-    margin-left: -10px;
-    background-color: #060b26;
-    height: 658px;
-    width: 120px;
-    margin-bottom: -200px;
+  background-color: #060b26;
+  height: 100vh;
+  width: 16vh;
+  display: inline-block;
+}
 
-    
-}
-.menu-bars{
-    position: absolute;
-    size: 200%;
-    transform: scale(1.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 43px;
-    margin-top: 30px;
-    size: absolute;
-    font-size: 2rem;
+.menu-bars {
+    display: inline-block;
+    margin-left: 4.5vh;
+    margin-top: 3.2vh;
     background: none;
+    font-size: 3.5rem;
 }
-.menu-bars2{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 25px;
-    margin-top: -5px;
-    size: absolute;
+.menu-bars2 {
+    display: inline-block;
+    margin-top: 2vh;
     font-size: 2rem;
-    background: none;
+    margin-left: 2rem;
 }
+
 .nav-menu {
-    background-color: #060b26;
-    width: 250px;
-    height: 150vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
+  background-color: #060b26;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
 }
+
 .nav-menu.active {
-    left: 0;
-    transition: 300ms;
+  left: 0;
+  transition: 350ms;
 }
+
 .nav-text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height: 70px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
 }
 
 .nav-text a {
-    text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 25px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
 }
-.nav-text a:hover {
-    background-color: #1a83ff;
 
+.nav-text a:hover {
+  background-color: #1a83ff;
 }
 
 .nav-menu-items {
-    width: 100%;
-    margin-left: -60px;
-
+  width: 100%;
 }
 
 .navbar-toggle {
-    background-color: #060b26;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+  background-color: #060b26;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
 span {
-    margin-left: 16px;
+  margin-left: 16px;
 }
